fixed: in tables, the heading row (appearance=label) can be misaligned with the lower rows,
https://github.com/kobotoolbox/enketo-express/issues/804

--- a/src/widget/table/tablewidget.scss
+++ b/src/widget/table/tablewidget.scss
@@ -5,7 +5,7 @@
         float: left;
         border: none;
         line-height: 17px;
-        width: 40%;
+        width: 35%;
         min-height: 1px;
     }
 
@@ -19,9 +19,9 @@
         label {
             @include flex(1);
 
-            max-width: 100px;
             text-align: center;
             padding-left: 0;
+            word-break: break-word;
 
             .active {
                 margin: 0 auto;
